<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:backgroundTint="#000000"
        android:id="@+id/constraint">

    <androidx.gridlayout.widget.GridLayout
            android:layout_width="303dp"
            android:layout_height="509dp"
            android:backgroundTint="#000000"
            android:clipChildren="true"
            app:columnCount="3"
            app:columnOrderPreserved="true"
            android:contextClickable="true"
            android:id="@+id/grid"
            android:textAlignment="center"
            android:fitsSystemWindows="true"
            app:orientation="horizontal"
            android:addStatesFromChildren="false"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtViewDisplay"
            app:layout_constraintEnd_toStartOf="@+id/btnDiv"
            >

        <Button
                android:text="@string/_7"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/btn7"
                app:layout_row="1"
                app:layout_column="0"
                android:clickable="true"
                android:backgroundTint="#A6D9DF"
                android:autoSizeTextType="none"
                android:visibility="visible"
                tools:visibility="visible"
                android:textSize="30sp"/>

        <Button
                android:text="@string/plus"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/btnPlus"
                app:layout_row="0"
                app:layout_column="0"
                android:clickable="true"
                android:backgroundTint="#FFFFFF"
                android:autoSizeTextType="none"
                android:visibility="visible"
                tools:visibility="visible"
                android:textSize="30sp"/>

        <Button
                android:text="@string/minus"
                android:layout_width="100dp"
                android:layout_height="98dp"
                android:id="@+id/btnMinus"
                app:layout_row="0"
                app:layout_column="1"
                android:clickable="true"
                android:backgroundTint="#FFFFFF"
                android:autoSizeTextType="none"
                android:visibility="visible"
                tools:visibility="visible"
                android:textSize="30sp"/>

        <Button
                android:text="@string/x"
                android:layout_width="100dp"
                android:layout_height="98dp"
                app:layout_row="0"
                app:layout_column="2"
                android:id="@+id/btnMult"
                android:clickable="true"
                android:backgroundTint="#FFFFFF"
                android:autoSizeTextType="none"
                android:visibility="visible"
                tools:visibility="visible"
                android:fontFamily="sans-serif-smallcaps"
                android:textSize="30sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

        <Button
                android:text="@string/_8"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_row="1"
                app:layout_column="1"
                android:id="@+id/btn8"
                android:backgroundTint="#A6D9DF"
                android:textSize="30sp"/>

        <Button
                android:text="@string/_9"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_row="1"
                app:layout_column="2"
                android:id="@+id/btn9"
                android:backgroundTint="#A6D9DF"
                android:textSize="30sp"
                />

        <Button
                android:text="@string/_4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_row="2"
                app:layout_column="0"
                android:id="@+id/btn4"
                android:backgroundTint="#A6D9DF"
                android:textSize="30sp"/>

        <Button
                android:text="@string/_5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_row="2"
                app:layout_column="1"
                android:id="@+id/btn5"
                android:backgroundTint="#A6D9DF"
                android:textSize="30sp"/>

        <Button
                android:text="@string/_6"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_row="2"
                app:layout_column="2"
                android:id="@+id/btn6"
                android:backgroundTint="#A6D9DF"
                android:textSize="30sp"/>

        <Button
                android:text="@string/_1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_row="3"
                app:layout_column="0"
                android:id="@+id/btn1"
                android:backgroundTint="#A6D9DF"
                android:textSize="30sp"/>

        <Button
                android:text="@string/_2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_row="3"
                app:layout_column="1"
                android:id="@+id/btn2"
                android:backgroundTint="#A6D9DF"
                android:textSize="30sp"/>

        <Button
                android:text="@string/_3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_row="3"
                app:layout_column="2"
                android:id="@+id/btn3"
                android:backgroundTint="#A6D9DF"
                android:textSize="30sp"/>

        <Button
                android:text="@string/_0"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_row="4"
                app:layout_column="0"
                android:id="@+id/btn0"
                android:backgroundTint="#A6D9DF"
                android:textSize="30sp"/>

        <Button
                android:text="@string/dot"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_row="4"
                app:layout_column="1"
                android:id="@+id/btnDot"
                android:backgroundTint="#A6D9DF"
                android:textSize="30sp"
                android:elevation="5dp"/>

        <Button
                android:text="@string/ac"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_row="4"
                app:layout_column="2"
                android:id="@+id/btnAC"
                android:backgroundTint="#A6D9DF"
                android:textSize="30sp"/>

    </androidx.gridlayout.widget.GridLayout>

    <TextView
            android:layout_width="390dp"
            android:layout_height="60dp"
            android:id="@+id/txtViewDisplay"
            tools:visibility="visible"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/grid"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="6dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textSize="36sp"
            android:textAlignment="viewEnd"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintHorizontal_bias="0.0"
            android:textColor="#FFFFFF"
            android:text="0"
            android:background="#000000"/>

    <Button
            android:text="@string/div"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/btnDiv"
            android:clickable="true"
            android:backgroundTint="#FFFFFF"
            android:autoSizeTextType="none"
            android:visibility="visible"
            tools:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/btnEqual"
            app:layout_constraintTop_toBottomOf="@+id/txtViewDisplay"
            app:layout_constraintStart_toEndOf="@+id/grid"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:textSize="30sp"
            android:layout_marginStart="5dp"/>

    <Button
            android:text="@string/equal"
            android:layout_width="100dp"
            android:layout_height="394dp"
            android:id="@+id/btnEqual"
            android:backgroundTint="#F38715"
            app:layout_constraintStart_toEndOf="@+id/grid"
            app:layout_constraintTop_toBottomOf="@+id/btnDiv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/grid"
            app:layout_constraintHorizontal_bias="0.0"
            style="@android:style/Widget.Button.Toggle"
            android:textSize="30sp"
            android:layout_marginStart="5dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>